<resources>
    <string name="app_name">Wekerlei Térvers</string>
    <string name="title_activity_maps">Térkép</string>
    <string name="location">HELYSZÍN</string>
    <string name="curiosities">Érdekességek</string>
    <string name="error_player">"Nem sikerült a videót lejátszani!"</string>
    <string name="dot_loc">". Helyszín"</string>
    <string name="enable_loc">"A helymeghatározás engedélyezve."</string>
    <string name="dis_loc">"A helymeghatározás nem lett engedélyezve!\nAz alkalmazás egyes funkciói így nem elérhetőek."</string>
    <string name="near_state_10m">". helyszín 10 méteren belül!\nSzeretné megnyítni az állomást?"</string>
    <string name="near_state_the">"A(z) "</string>
    <string name="btn_yes">"Igen"</string>
    <string name="btn_no">"Nem"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="starting_text_1">Jelfák az úton</string>
    <string name="starting_text_2">A Wekerlei Társaskör Egyesület kezdeményezésére jött létre ez az egyedülálló térvers a műemlékvédett Wekerletelepen.</string>
    <string name="starting_text_3">A tíz állomásból, tíz „versszakból”, tíz installációból, azaz jelfából álló komplex élményt nyújtó séta 1,6 kilométeren át vezeti a látogatót. Az alkotók célja, hogy az erre elkészített térkép segítségével az érdeklődők végigsétáljanak a mintegy 45 perces szakaszon, és mindeközben egyszerre művészeti-építészeti-környezeti útélményben legyen részük.\n\nMindegyik installációba egy acél nézőke van beépítve, melyen keresztül fókuszálhatunk a városrész egy-egy egyedi szépségű vagy hangulatú részletére.\n\nA jelfák önmagukban is szemet gyönyörködtető látványt nyújtanak, kő talapzatból kinövő, rozsdamentes acél elemekkel kombinált, faragott faoszlopok. Mindegyik más, mivel formáját és a talapzatokba bevésett szövegszilánkokat a nézőkén át megpillantható látvány ihlette.</string>
    <string name="starting_text_4">Miért jelfa?</string>
    <string name="starting_text_5">Mert a műemlékvédett Wekerletelep egy olyan részletét jelzi, mely mellett talán tovább mennénk, anélkül, hogy észrevennénk szépségét.</string>
    <string name="starting_text_6">Miért térvers?</string>
    <string name="starting_text_7">A térvers végigjárása olyan élményt nyújt, mintha egy barangolás stációit megéneklő verset olvasnánk. A különbség annyi, hogy itt a „versszakok” (helyszínek) a valósan elénk táruló látvány, hangulat és szöveg együtteséből vannak összerakva.</string>
    <string name="starting_text_8">Miért komplex?</string>
    <string name="starting_text_9">Mert az installációk formavilágában a szobrászat, költészet, építészet, népművészet, környezeti kultúra egyszerre jelenik meg. A térvers alkotói csapatának további tervei között szerepel a zene megjelenítése az egyes állomásokon.\n\nA Wekerlei Térverset végigjárva az épített és természeti értékek megismerése mellett rácsodálkozhatunk a hely hangulatára, míves részletekre, a meseváros apró szépségeire.\n\nA jelfa út elkészülését Kispest Önkormányzata támogatta, és egy maroknyi önkéntes ötlete és munkája nyomán született meg.</string>
    <string name="helyszinek">Helyszínek</string>
    <string name="terkep">Térkép</string>
    <string name="erdekessegek">Érdekességek</string>
    <string name="kapcsolat">Kapcsolat</string>
    <string name="facebook">Facebook</string>
    <string name="weboldal">Weboldal</string>
    <string name="team_name_1">Bank Róbert</string>
    <string name="team_desc_1">Civil foglalkozása közgazdász. 2008 óta dolgozik önkéntesként a Wekerlén.\n\nA 2008-as centenáriumi évben a 100 éves  Wekerletelep szlogenjét ő alkotta meg. Részt vett a centenáriumi évvel kapcsolatos kommunikációs munkában. 2014-ben részt vállalt a Wekerle Kalauz elkészítésében.</string>
    <string name="team_name_2">Csóka Eszter</string>
    <string name="team_desc_2">Civil foglalkozása játék- és bábkészítő, drámapedagógus, kulturális projektek szervezője, szervezetfejlesztő tréner. 2005 óta dolgozik önkéntesként a Wekerlén.\n\nNagyon sok wekerlei projektekben dolgozott önkéntesként: Wekerlei Életfa, Wekerle 100 éves programsorozat, Wekerlei Székelykapu Napok, Wekerlei Gondolatnaptár,  Wekerlei Szabadegyetem,  Wekerlei Mikulásvárás,  Dombon Álmodók alkotói projektjei kitalálója, megszervezője. Ezek közül a Mikulásvárásra a legbüszkébb.</string>
    <string name="team_name_3">Fazekas Csaba </string>
    <string name="team_desc_3">Civil foglalkozása építész. 2007 óta dolgozik önkéntesként Wekerlén.\n\nRészt vett önkéntesként a Centenáriumi Építész kiállításában, az Építészeti kézikönyv elkészítésében, a Megfagyott Muzsikusok szoborcsoport és az Életfa kidolgozásában, a Szent Iván-éji Tűzszobor megvalósításában. Mindig az a munka a legkedvesebb számára, amiben éppen benne tevékenykedik.</string>
    <string name="team_name_4">Iváncsics László</string>
    <string name="team_desc_4">Civil foglalkozása építőmérnök. 2007 óta dolgozik önkéntesként a Wekerlén.\n\nFő projektek, amiben önkéntesként részt vett: Életfa állítás, Szent Iván éji tűzszobrok. Amihez jó mesterember segítsége kell, arra őt kérik fel.</string>
    <string name="team_name_5">Romhányi András</string>
    <string name="team_desc_5">Civil foglalkozása nyugalmazott népművelő. 1998 óta dolgozik önkéntesként Wekerlén.\n\nBüszke arra, hogy a Wekerle Centenárium programvezetője volt, azon belül az “István, a király” előadás rendezője. A Magyar Kollégium Kulturális Egyesület alapítója és elnöke. Számos nagy rendezvény ötletadója és szervezője vagy társszervezője (Életfa ünnep, Wekerlei Székelykapu Napok, Térzene, Szent Iván-éji tűzszobor, Wekerlei Nyári Szabadegyetem, Wekerlei Sörkör, Wekerlei Mikulás).</string>
    <string name="team_name_6">Somlói Judit</string>
    <string name="team_desc_6">Civil foglalkozása építész. 2007 óta dolgozik önkéntesként a Wekerlén.\nA Téltemetés ötletgazdája és évekig a főrendezője volt, az első esemény szervezésekor került kapcsolatba az önkéntesekkel.\n2009-től alelnöke, 2012 óta a Wekerlei Társaskör Egyesület elnöke, így az összes rendezvény, projekt megvalósításában oroszlánrészt vállalt. Nevéhez fűződik az Építészklub alapítása 2007-ben, melyet a műemlékvédelem területén végzett tevékenységéért 2011-ben Forster Gyula emlékéremmel ismertek el. Számos wekerlei témájú kiadvány főszerkesztője. Több wekerlei köztéri alkotás létrehozásában részt vett, Győri Ottmár téri Centenáriumi emlékhely, a Megfagyott Muzsikusok, Eperfa, Életfa, s évről-évre a Szentiván éji tűzszobor alkotói csoportjának tagja. A Wekerlei Napok és Kulturális Örökség Napjai megrendezése különösen kedves és nagy kihívás számára, de mindegyik rendezvényt fontosnak tartja a közösségi kapcsolatok építése és erősítése szempontjából. A legfontosabb számára a Wekerletelep érdekképviseletének megerősítése.</string>
    <string name="team_name_7">Szebenyi Marianna</string>
    <string name="team_desc_7">Civil foglalkozása képző, tréner,  közösségszervező, közösségfejlesztő, képzés- és tananyagfejlesztő, konferencia- és rendezvényszervező. 2002 óta dolgozik önkéntesként Wekerlén.\n\nLegkedvesebb számára a Vasárnapi Térzenék szervezése. Ezen kívül szinte minden wekerlei rendezvény egyik szervezője, bonyolítója, sok rendezvény ötletadója is. Bevallása szerint nagy megtiszteltetés volt számára a Wekerlei Életfa alkotói csapatának tagja lenni.</string>
    <string name="team_name_8">Urmai Ungurán László</string>
    <string name="team_desc_8">Civil foglalkozása grafikus, festőművész. 2006 óta dolgozik önkéntesként Wekerlén.\n\nŐ alkotta meg a WTE arculatát, megújította a Wekerle Újság design-ját, kialakította a 100 éves Wekerle projekt arculatát, megtervezte a WTE portált tervezése. Nevéhez fűződik többek között a Wekerlei Székelykapu Napok, a Wekerlei Napok, a Wekerlei Sörkör arculata, a Zenepavilon arculati terve, az Életfa, Szent Iván Tűzszobor, „Ház szeme” projekt. A wekerlei falinaptárak, és még számos más grafikai és arculati munka. Amire legbüszkébb: Életfa, WTE arculata, wekerlei falinaptárak, sok civil szervezet logója.</string>
    <string name="team_name_9">Váradi Balázs</string>
    <string name="team_desc_9">Civil foglalkozása közgazdász. 2002 óta dolgozik önkéntesként a Wekerlén.\n\nSzinte mindegyik wekerlei projektben és rendezvényen részt vesz és tetemes feladatot vállal. (Téltemetés, Mikulás, Wekerlei Napok, Életfa, Wekerle Centenárium stb.)</string>
    <string name="alkoto_csapat">A Wekerlei Térvers alkotói csapata:</string>
    <string name="profile_picture">Arckep</string>
    <string name="nav_menu_img">Menü kép</string>
    <string name="email">E-mail: info@wekerleitervers.hu</string>
    <string name="idezet">Idézet</string>
    <string name="leiras">Leírás</string>
    <string name="hang_lejatszas">Hanganyag lejátszása</string>
    <string name="mainpage">Főoldal</string>
    <string name="group_image">csoportkép</string>
    <string name="next_state">Következő helyszín</string>
    <string name="play_sound">Hanganyag lejátszása</string>
    <string name="stop_sound">Hanganyag leállítása</string>
    <string name="prev_state">Előző állomás</string>
</resources>