<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:paddingHorizontal="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/startTextV1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/starting_text_1"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/startTextV2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/starting_text_2"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/startTextV1" />

                <TextView
                    android:id="@+id/startTextV3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/starting_text_3"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/startTextV2"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/startTextV4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_text_4"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:paddingVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/startTextV3" />

                <TextView
                    android:id="@+id/startTextV5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/starting_text_5"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/startTextV4" />

                <TextView
                    android:id="@+id/startTextV6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_text_6"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:paddingVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/startTextV5" />

                <TextView
                    android:id="@+id/startTextV7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/starting_text_7"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/startTextV6" />

                <TextView
                    android:id="@+id/startTextV8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_text_8"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:paddingVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/startTextV7" />

                <TextView
                    android:id="@+id/startTextV9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_text_9"
                    android:textSize="15sp"
                    android:paddingVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/startTextV8" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>

    <include
        layout="@layout/nav_drawer"
        android:id="@+id/nawview"/>

</androidx.drawerlayout.widget.DrawerLayout>


