<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.DetailsProjectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context="hu.bme.aut.android.wekerleitervers.activity.DetailsProjectActivity">

                <com.google.android.youtube.player.YouTubePlayerView
                    android:id="@+id/youtubePlayerV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="5dp"/>

                <ScrollView
                    android:id="@+id/scrollView3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingHorizontal="10dp"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/youtubePlayerV">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/alkoto_csapat"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:paddingTop="10dp"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="210dp"
                            android:layout_margin="15dp"
                            android:id="@+id/im_group"
                            android:contentDescription="@string/group_image" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingBottom="5dp"
                            android:text="@string/team_name_1"
                            android:textSize="15sp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingVertical="5dp"
                            android:text="@string/team_name_2"
                            android:textSize="15sp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingVertical="5dp"
                            android:text="@string/team_name_3"
                            android:textSize="15sp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingVertical="5dp"
                            android:text="@string/team_name_4"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingVertical="5dp"
                            android:text="@string/team_name_5"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingVertical="5dp"
                            android:text="@string/team_name_6"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingVertical="5dp"
                            android:text="@string/team_name_7"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/team_name_8"
                            android:layout_gravity="center"
                            android:paddingVertical="5dp"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="5dp"
                            android:paddingBottom="50dp"
                            android:text="@string/team_name_9"
                            android:textSize="15sp" />

                    </LinearLayout>

                </ScrollView>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>
    </LinearLayout>

    <include
        layout="@layout/nav_drawer"
        android:id="@+id/nawview"/>
</androidx.drawerlayout.widget.DrawerLayout>


