<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.LocationDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".activity.LocationDetailsActivity"
                android:id="@+id/constraint_layout">

                <ScrollView
                    android:id="@+id/scrollView2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingHorizontal="10dp"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toTopOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingVertical="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/locQuoteDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/idezet"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/locDesc"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="10dp"
                            android:text="@string/leiras"
                            android:textSize="15sp" />

                    </LinearLayout>
                </ScrollView>

                <include
                    android:id="@+id/maps_fragment"
                    layout="@layout/fragment_map_detail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/sound_control"
                    app:layout_constraintTop_toTopOf="@+id/guideline3"
                    android:layout_margin="5dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/sound_control"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="1dp"
                    android:background="@color/nav_header"
                    app:layout_constraintBottom_toTopOf="@+id/state_control">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:paddingStart="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/hang_lejatszas"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageButton
                        android:id="@+id/btn_sound_play"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/gray"
                        android:contentDescription="@string/play_sound"
                        android:src="@drawable/ic_play"
                        app:layout_constraintEnd_toStartOf="@+id/btn_sound_pause"
                        tools:ignore="MissingConstraints" />

                    <ImageButton
                        android:id="@+id/btn_sound_pause"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/gray"
                        android:contentDescription="@string/stop_sound"
                        android:src="@drawable/ic_stop"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/state_control"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/nav_header"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageButton
                        android:id="@+id/btn_prev_state"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@color/gray"
                        android:src="@drawable/ic_prev"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        android:contentDescription="@string/prev_state"/>

                    <TextView
                        android:id="@+id/text_prev_state"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/btn_prev_state"
                        tools:ignore="RtlSymmetry" />


                    <TextView
                        android:id="@+id/text_next_state"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/btn_next_state"
                        tools:ignore="RtlSymmetry" />

                    <ImageButton
                        android:id="@+id/btn_next_state"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/gray"
                        android:src="@drawable/ic_next"
                        android:contentDescription="@string/next_state"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.6" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>
    </LinearLayout>

    <include
        layout="@layout/nav_drawer"
        android:id="@+id/nawview"/>

</androidx.drawerlayout.widget.DrawerLayout>